--- a/general.html
+++ b/general.html
@@ -1,4 +1,4 @@
 <html>
-  <h>hhhhhadfaf</>
-
+  <h1>hhhhhadfaf</h1>
+   <a href="about.html">About this project</a>
   <img src="images/breaching_whale.jpg" />
